--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -1,54 +1,139 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+.material-icons {
+    color: #fff;
+    vertical-align: middle;
+}
+
+body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
 }
 
-header{
+main {
     display: flex;
-    background: #444;
-    justify-content: space-between ;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    width: 180px;
+    height: 100vh;
+    background: #222;
 }
 
-nav ul{
-    display: flex;
+#logo-nav {
+    width: 160px;
+    margin: 0.5rem;
 }
 
-nav ul li{
+nav ul li {
     list-style: none;
-} 
+}
 
-nav ul li a{
-    padding: 0.5rem;
+nav ul li a {
+    padding: 1rem;
+    display: block;
     text-decoration: none;
-    color: white ;
+    text-align: justify;
+    align-items: center;
+    color: white;
 }
 
-nav ul li a:hover{
-    background: #eee;
-    color: orangered ;
+nav ul li a:hover,
+.active {
+    border-left: 3px solid #fff;
+    background: #444;
+    font-size: 1rem;
+    color: orange;
 }
 
-div{
-    color: white ; 
-}
-
-div a{
-    text-decoration: none;
-    color: black;
-    background: white;
-    padding: 0.3rem;
-    border-radius: 7px;
-    margin: 5px;
-    transition: ease-in 0.2s;
-}
-
-div a:hover{
-    background: #111;
+#user {
     color: #fff;
+    text-align: center;
+    padding: 1rem;
+    /* margin-bottom: 12px; */
+    position: relative;
+    cursor: pointer;
+}
+
+/* #logout_btn {
+    background: white;
+    border-radius: 7px;
+    border: none;
+    margin-bottom: 10px;
+}
+
+#logout_btn a {
+    display: inline-block;
+    text-decoration: none;
+    color: #111;
+    font-size: 0.9rem;
+    padding: 10px;
+    border-radius: 7px;
+}
+
+#logout_btn a:hover {
+    background: #444;
+    color: orange;
+
+} */
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    left: 18%;
+    bottom: 0;
+    background-color: #111;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+
+.dropdown-content a {
+    color:#fff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #444;
+}
+
+.show {
+    display: inline-block;
+}
+
+@media screen and (max-width:800px) {
+    nav ul li a {
+        padding: none;
+    }
+
+    nav ul li a:hover {
+        border-left: 3px solid #fff;
+    }
+
+    nav ul li a span {
+        display: none;
+    }
+
+    #logo-nav {
+        width: 40px;
+    }
+
+    header {
+        width: 60px;
+    }
+
+    #logout_btn {
+        display: none;
+    }
 }
