--- a/css/product.css
+++ b/css/product.css
@@ -1,11 +1,12 @@
 .main-content{
-    width: 85vw;
+    width: 100vw;
     margin: 0 auto;
+    margin-left:180px; 
 }
 
 #search-add{
     display: flex;
-    justify-content: space-evenly ;
+    justify-content: space-around ;
     padding: .5rem;
     margin: 0.5rem;
 
@@ -40,8 +41,6 @@
     width: 80vw;
     margin: 0 auto;
     text-align: center ;
- 
-
 }
 
 th{
@@ -58,19 +57,16 @@ td{
     padding: 0.5rem;
 }
 
-#product_name{
-    
+#product_name{   
     font-size: 1.1rem;
-    font-weight: 500;
-    
+    font-weight: 500;    
 }
 
 #product_description{
     color: #555;
 }
 
-
-#products img{
+.product img{
     width: 5rem;
     height: 5rem;
 }
@@ -104,5 +100,10 @@ td{
 @media screen and (max-width:800px) {
     #search_box{ 
         width: 10rem;
+    }
+    
+    .main-content{
+        margin: 0 auto;
+        margin-left: 45px;
     }
 }
